--- a/mall_customer/ec-welcome-message.html
+++ b/mall_customer/ec-welcome-message.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>歡迎加入好嗨商電商聯盟平台</title>
+		<title>歡迎加入 <span th:text="${storeInfo.teamName}">[storeName]</span></title>
 		<style>
 			html,body { padding: 0; margin:0; }
+			a:hover { color: #009ef7; }
 		</style>
 	</head>
 	<body>
@@ -15,280 +16,54 @@
 					<tr>
 						<td align="left" valign="center">
 							<div style="text-align:left; margin: 40px 20px 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-								<!-- Banner/Logo（變體二：卡片內） -->
-								<div style="margin-bottom: 30px" th:if="${storeInfo.storeLogo != null and storeInfo.storeLogo != ''}">
-									<img alt="Logo" th:src="${storeInfo.storeLogo}" style="width: 100%; height: auto; max-width: 100%; display: block;" />
-								</div>
-								<div style="margin-bottom: 30px" th:if="${storeInfo.storeLogo == null or storeInfo.storeLogo == ''}">
-									<span style="font-size: 24px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${storeInfo.teamName}">[storeName]</span>
-								</div>
+							<!-- Banner/Logo（變體二：卡片內） -->
+							<div style="margin-bottom: 30px; text-align:center;" th:if="${storeInfo.storeLogo != null and storeInfo.storeLogo != ''}">
+								<img alt="Logo" th:src="${storeInfo.storeLogo}" style="width: 100%; height: auto; max-width: 100%; display: block; margin: 0 auto;" />
+							</div>
 								<!--begin:Email content-->
-								<div class="d-flex flex-column flex-root" id="kt_app_root">
-				<!--begin::Wrapper-->
-				<div class="d-flex flex-column flex-column-fluid">
-					<!--begin::Header-->
-					<!--end::Header-->
-					<!--begin::Body-->
-					<div class="scroll-y flex-column-fluid px-10 py-10" data-kt-scroll="true" data-kt-scroll-activate="true" data-kt-scroll-height="auto" data-kt-scroll-dependencies="#kt_app_header_nav" data-kt-scroll-offset="5px" data-kt-scroll-save-state="true" style="background-color:#D5D9E2; --kt-scrollbar-color: #d9d0cc; --kt-scrollbar-hover-color: #d9d0cc">
-						<!--begin::Email template-->
-						<style>html,body { padding:0; margin:0; font-family: Inter, Helvetica, "sans-serif"; } a:hover { color: #009ef7; }</style>
-						<div id="#kt_app_body_content" style="background-color:#D5D9E2; font-family:Arial,Helvetica,sans-serif; line-height: 1.5; min-height: 100%; font-weight: normal; font-size: 15px; color: #2F3044; margin:0; padding:0; width:100%;">
-							<div style="background-color:#ffffff; margin:20px auto; max-width: 600px;">
-								<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" height="auto" style="border-collapse:collapse">
+								<div style="text-align:center; margin:0 16px 24px 16px">
+									<!--begin:Text-->
+									<div style="font-size: 14px; font-weight: 500; margin-bottom: 27px; font-family:Arial,Helvetica,sans-serif;">
+										<p style="margin-bottom:9px; color:#181C32; font-size: 22px; font-weight:700">歡迎加入 <span th:text="${storeInfo.teamName}">[storeName]</span>！🎉</p>
+										<p style="margin-bottom:2px; color:#7E8299">感謝您選擇我們！我們很高興您成為我們的會員。</p>
+										<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號[ <span th:text="${data.email}"> </span> ]已經成功啟用，現在您可以開始使用我們的服務，盡情探索各種優質商品，享受便利的購物體驗！</p>
+									</div>
+									<!--end:Text-->
+									<!--begin:Action-->
+									<a th:href="${data.login}" target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">開始購物</a>
+									<!--end:Action-->
+								</div>
+								<!--end:Email content-->
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 12px 10px; font-family:Arial,Helvetica,sans-serif;">
+							<p style="color:#181C32; font-size: 15px; font-weight: 600; margin-bottom:10px; text-align:center;">聯繫我們：</p>
+							<p style="color:#7E8299; margin-bottom:10px;">如有任何問題或需要協助，歡迎與我們聯繫：</p>
+							<div style="border-top: 1px solid #e9ecef; padding-top: 10px; margin-top: 10px; max-width: 400px; margin-left: auto; margin-right: auto;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;">
 									<tbody>
-										<tr>
-											<td align="center" valign="center" style="text-align:center; padding-bottom: 10px">
-												<!--begin:Email content-->
-												<div style="text-align:center; margin:0 16px 24px 16px">
-													<!--begin:Media-->
-													<div style="margin-bottom: 15px">
-														<img alt="Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/icon-positive-vote-1.png" />
-													</div>
-													<!--end:Media-->
-													<!--begin:Text-->
-													<div style="font-size: 14px; font-weight: 500; margin-bottom: 27px; font-family:Arial,Helvetica,sans-serif;">
-														<p style="margin-bottom:9px; color:#181C32; font-size: 22px; font-weight:700">歡迎加入 <span th:text="${storeInfo.teamName}">[storeName]</span>！🎉</p>
-														<p style="margin-bottom:2px; color:#7E8299">感謝您選擇我們！我們很高興您成為我們的會員。</p>
-														<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號[ <span th:text="${data.email}"> </span> ]已經成功啟用，現在您可以開始使用我們的服務，盡情探索各種優質商品，享受便利的購物體驗！</p>
-														<!-- <p style="margin-bottom:2px; color:#7E8299">content</p> -->
-													</div>
-													<!--end:Text-->
-													<!--begin:Action-->
-													<a th:href="${data.login}" target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">開始購物</a>
-													<!--begin:Action-->
-												</div>
-												<!--end:Email content-->
+										<tr th:if="${storeInfo.serviceEmail != null and storeInfo.serviceEmail != ''}">
+											<td style="padding: 0 0 8px 0; text-align:left;">
+												<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">客服信箱：</span>
+												<a th:href="'mailto:' + ${storeInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${storeInfo.serviceEmail}">[serviceEmail]</a>
 											</td>
 										</tr>
-										<tr style="display: flex; justify-content: center; margin:0 30px 35px 30px">
-											<td align="start" valign="start" style="padding-bottom: 10px;">
-												<p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">開始您的購物之旅：</p>
-												<!--begin::Wrapper-->
-												<div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px">
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">1</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a th:href="${data.browseStores}" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">瀏覽商品</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">探索我們的優質商品，從時尚服飾到美食、科技產品應有盡有</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-															<!--begin::Separator-->
-															<div class="separator separator-dashed" style="margin:17px 0 15px 0"></div>
-															<!--end::Separator-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">2</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">分享獲得獎勵</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">分享喜愛的商品給親友，成功推薦購買即可獲得回饋</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-															<!--begin::Separator-->
-															<div class="separator separator-dashed" style="margin:17px 0 15px 0"></div>
-															<!--end::Separator-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">3</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">參與平台活動</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">定期關注我們推出的特惠活動與限時優惠</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-												</div>
-												<!--end::Wrapper-->
-
-												<p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">新會員專屬優惠</p>
-												<!--begin::Wrapper-->
-												<div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px">
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">🎁</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a th:href="${data.firstShopping}" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">首購享9折</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">使用優惠碼：WELCOME2025</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-															<!--begin::Separator-->
-															<div class="separator separator-dashed" style="margin:17px 0 15px 0"></div>
-															<!--end::Separator-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">🎁</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">免運券</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">已自動存入您的帳戶，訂單滿NT$500即可使用</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-															<!--begin::Separator-->
-															<div class="separator separator-dashed" style="margin:17px 0 15px 0"></div>
-															<!--end::Separator-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-													<!--begin::Item-->
-													<div style="display:flex">
-														<!--begin::Media-->
-														<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/icon-polygon.svg" />
-															<span style="position: absolute; color:#50CD89; font-size: 16px; font-weight: 600;">🎁</span>
-														</div>
-														<!--end::Media-->
-														<!--begin::Block-->
-														<div>
-															<!--begin::Content-->
-															<div>
-																<!--begin::Title-->
-																<a style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">100 消費金</a>
-																<!--end::Title-->
-																<!--begin::Desc-->
-																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">可在我們的商店消費折抵</p>
-																<!--end::Desc-->
-															</div>
-															<!--end::Content-->
-														</div>
-														<!--end::Block-->
-													</div>
-													<!--end::Item-->
-												</div>
+										<tr th:if="${storeInfo.servicePhone != null and storeInfo.servicePhone != ''}">
+											<td style="padding: 0; text-align:left;">
+												<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">聯絡電話：</span>
+												<a th:href="'tel:' + ${storeInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${storeInfo.servicePhone}">[servicePhone]</a>
 											</td>
-										</tr>
-										<tr>
-											<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 0 10px 10px 10px; font-weight: 500; color: #A1A5B7; font-family:Arial,Helvetica,sans-serif">
-												<p style="color:#181C32; font-size: 16px; font-weight: 600; margin-bottom:9px">聯繫我們：</p>
-												<p>如有任何問題或需要協助，歡迎與我們聯繫：</p>
-												<div style="border-top: 1px solid #e9ecef; padding-top: 10px; margin-top: 10px; max-width: 400px; margin-left: auto; margin-right: auto;">
-													<table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;">
-														<tbody>
-															<tr th:if="${storeInfo.serviceEmail != null and storeInfo.serviceEmail != ''}">
-																<td style="padding: 0 0 8px 0; text-align:left;">
-																	<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">客服信箱：</span>
-																	<a th:href="'mailto:' + ${storeInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${storeInfo.serviceEmail}">[serviceEmail]</a>
-																</td>
-															</tr>
-															<tr th:if="${storeInfo.servicePhone != null and storeInfo.servicePhone != ''}">
-																<td style="padding: 0; text-align:left;">
-																	<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">聯絡電話：</span>
-																	<a th:href="'tel:' + ${storeInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${storeInfo.servicePhone}">[servicePhone]</a>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td align="center" valign="center" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif; padding: 20px 10px;">
-												<p>再次感謝您加入 <span th:text="${storeInfo.teamName}">[storeName]</span>，讓我們一起探索更便利、更精彩的購物新體驗！</p>
-											</td>
-										</tr>
-										<tr>
-											<!--
-												<td align="center" valign="center" style="text-align:center; padding-top: 20px;">
-												<a href="#" style="margin-right:10px">
-													<img alt="Logo" src="assets/media/email/icon-linkedin.svg" />
-												</a>
-												<a href="#" style="margin-right:10px">
-													<img alt="Logo" src="assets/media/email/icon-dribbble.svg" />
-												</a>
-												<a href="#" style="margin-right:10px">
-													<img alt="Logo" src="assets/media/email/icon-facebook.svg" />
-												</a>
-												<a href="#">
-													<img alt="Logo" src="assets/media/email/icon-twitter.svg" />
-												</a>
-											</td>
- 											-->
 										</tr>
 									</tbody>
 								</table>
 							</div>
-						</div>
-						<!--end::Email template-->
-					</div>
-					<!--end::Body-->
-				</div>
-				<!--end::Wrapper-->
-			</div>
-								<!--end:Email content-->
-							</div>
+						</td>
+					</tr>
+					<tr>
+						<td align="center" valign="center" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif; padding: 20px 10px;">
+							<p>再次感謝您加入 <span th:text="${storeInfo.teamName}">[storeName]</span>，讓我們一起探索更便利、更精彩的購物新體驗！</p>
 						</td>
 					</tr>
 					<tr>
